[PreferencesHelper] Code Cleanup: fixed lint warning